Fixed layout bugs

--- a/src/TradesList.css
+++ b/src/TradesList.css
@@ -1,4 +1,4 @@
-.RateGrid {
+.TradesList {
     background-color: red;
     display: flex;
     flex: 1 1 auto;
